# ngsearch

./: CMakeLists.txt  filehandler.cpp  filehandler.h  main.cpp
